Update LSTM .ipynb

--- a/six-finally/LSTM .ipynb
+++ b/six-finally/LSTM .ipynb
@@ -229,9 +229,9 @@
    "metadata": {},
    "source": [
     "## 回答\n",
-    "1.tokenize_example函数作用是对英语和德语进行分词化,标准化和格式化,使其符合Seq2Seq模型的输入要求.\n"
-    "2.分词处理：使用 en_nlp.tokenizer 对英文句子 example["en"] 进行分词，并截取前 max_length 个词；同理，使用 de_nlp.tokenizer 对德文句子 example["de"] 进行分词，并截取前 max_length 个词. \n"
-    "3.小写转换：如果 lower=True，将所有分词转换为小写形式，以减少词汇表的大小。\n"
+    "tokenize_example函数作用是对英语和德语进行分词化,标准化和格式化,使其符合Seq2Seq模型的输入要求.\n"
+    "分词处理：使用 en_nlp.tokenizer 对英文句子 example["en"] 进行分词，并截取前 max_length 个词；同理，使用 de_nlp.tokenizer 对德文句子 example["de"] 进行分词，并截取前 max_length 个词. \n"
+    "小写转换：如果 lower=True，将所有分词转换为小写形式，以减少词汇表的大小。\n"
     
    ]
   },
